# py-siafi-efd

./: .gitignore  README.md  index.html  index.js  listeners.py  main.py  output.css  package-lock.json  package.json  pyproject.toml  pyscript.toml  pytest.ini  tailwind.config.js
components/: component.py  infos.py  tables.py
pub_sub/: change_disabled.py  pub_sub.py
sheets/: efd.py  parse.py  siafi.py  table.py
templates/: btn.html  parse_info.html  table.html  table_info.html
utils/: float_converter.py  format_brl_currency.py  integer_converter.py  loading.js  test_float_converter.py  test_format_brl_currency.py  test_integer_converter.py
